--- a/build.gradle
+++ b/build.gradle
@@ -9,34 +9,34 @@ repositories {
 
 dependencies {
     // Lucene (versão original de desenvolvimento: 4.10.1, versão atual: 7.7.2)
-    implementation 'org.apache.lucene:lucene-core:7.7.2'
-    implementation 'org.apache.lucene:lucene-analyzers-common:7.7.2'
-    implementation 'org.apache.lucene:lucene-queryparser:7.7.2'
-    implementation 'org.apache.lucene:lucene-queries:7.7.2'
-    implementation 'org.apache.lucene:lucene-join:7.7.2'
+    api 'org.apache.lucene:lucene-core:7.7.2'
+    api 'org.apache.lucene:lucene-analyzers-common:7.7.2'
+    api 'org.apache.lucene:lucene-queryparser:7.7.2'
+    api 'org.apache.lucene:lucene-queries:7.7.2'
+    api 'org.apache.lucene:lucene-join:7.7.2'
 
     // Logging
-    implementation 'log4j:log4j:1.2.17'
+    api 'log4j:log4j:1.2.17'
 
     // Others
-    implementation 'net.java.dev.jna:jna:5.3.1'
-    implementation 'commons-io:commons-io:2.6'
-    implementation 'org.apache.commons:commons-lang3:3.7'
-    implementation 'commons-codec:commons-codec:1.10'
-    implementation 'net.lingala.zip4j:zip4j:1.3.2'
-    implementation 'org.apache.logging.log4j:log4j-api:2.1'
-    implementation 'org.apache.logging.log4j:log4j-core:2.1'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.1'
-    implementation 'org.postgresql:postgresql:42.2.5'
-    implementation 'org.xerial:sqlite-jdbc:3.21.0.1'
-    implementation 'mysql:mysql-connector-java:8.0.15'
-    implementation 'com.google.firebase:firebase-admin:7.0.0'
-    implementation 'org.apache.commons:commons-dbcp2:2.6.0'
-    implementation 'com.konghq:unirest-java:3.5.00'
-    implementation 'org.eclipse.persistence:javax.persistence:2.2.1'
-    implementation 'commons-beanutils:commons-beanutils-core:1.8.3'
-    implementation 'joda-time:joda-time:2.10.6'
-    implementation "com.openai:openai-java:4.16.1"
+    api 'net.java.dev.jna:jna:5.3.1'
+    api 'commons-io:commons-io:2.6'
+    api 'org.apache.commons:commons-lang3:3.7'
+    api 'commons-codec:commons-codec:1.10'
+    api 'net.lingala.zip4j:zip4j:1.3.2'
+    api 'org.apache.logging.log4j:log4j-api:2.1'
+    api 'org.apache.logging.log4j:log4j-core:2.1'
+    api 'org.apache.logging.log4j:log4j-slf4j-impl:2.1'
+    api 'org.postgresql:postgresql:42.2.5'
+    api 'org.xerial:sqlite-jdbc:3.21.0.1'
+    api 'mysql:mysql-connector-java:8.0.15'
+    api 'com.google.firebase:firebase-admin:7.0.0'
+    api 'org.apache.commons:commons-dbcp2:2.6.0'
+    api 'com.konghq:unirest-java:3.5.00'
+    api 'org.eclipse.persistence:javax.persistence:2.2.1'
+    api 'commons-beanutils:commons-beanutils-core:1.8.3'
+    api 'joda-time:joda-time:2.10.6'
+    api "com.openai:openai-java:4.16.1"
 }
 
 test {
